--- a/css/base.css
+++ b/css/base.css
@@ -1,156 +1,5 @@
-.logo a {
-
-    
-    cursor: pointer;
-    text-decoration: none;
+body {
+  max-width: 1440px;
+  font-family: "Gilroy", sans-serif;
+  font-weight: 400;
 }
-
-.logo {
-    width: 1440px;
-    height: 116px;
-    margin-top: -21px;
-    background-color: rgba(144, 197, 74, 0);
-}
-.logo img {
-    position: relative;
-    width: 51px;
-    height: 59px;
-    margin-top: 39px;
-    margin-left: 80px;
-}
-
-.textlogo  {  
-transform: translate(110px,-50px) ;
-  justify-content:center;
-  font-size: 25px;
-  color: black;
-  font-family:'Courier New', Courier, monospace;
- margin-left:400px;
-    margin-top:20px;
-}
-.textlogo a{
-    color: black;
-    font-family:'Courier New', Courier, monospace;  
-}
-.textlogo a:hover {
-    color:#F7941E;
-}
-.textlogo2   {  
-transform: translate(110px,-50px) ;  
-  justify-content:center;
-  font-size: 25px;
-  color: black;
-  font-family:'Courier New', Courier, monospace;
- margin-top:-25px;
- margin-left:580px;  
-}
-.textlogo2 a{
-    color: black;
-    font-family:'Courier New', Courier, monospace;
-
-}
-.textlogo2 a:hover {
-    color:#F7941E;
-}
-.textlogo3  {  
-    transform: translate(680px,-50px) ; 
-  justify-content:center;
-  font-size: 25px;
-  color: black;
-  font-family:'Courier New', Courier, monospace;
- margin-top:-25px;
- margin-left:235px; 
-}
-
-.textlogo3 a{
-    color: black;
-    font-family:'Courier New', Courier, monospace;
-}
-.textlogo3 a:hover {
-    color:#F7941E;
-}
-.textlogo4  {  
-    transform: translate(580px,-50px) ; 
-  justify-content:center;
-  font-size: 25px;
-  color: black;
-  font-family:'Courier New', Courier, monospace;
- margin-top:-25px;
- margin-left:550px; 
-}
-.textlogo4 a {
-    color: black;
-  font-family:'Courier New', Courier, monospace;
-}
-.textlogo4 a:hover {
-    color:#F7941E;
-}
-.click1 {
- display:flex; 
-justify-content:center;
-width:150px;
-height: 43px;
-border-radius: 5px;
-background-color: rgba(235, 133, 8, 0);
-border: solid 1.5px rgb(235, 132, 8);
-margin-left: 1410px;
-margin-top:-90px;
-}
-.click1 h2{
-   margin: auto;
-   color:#F7941E;
-   font-family:'Courier New', Courier, monospace;
-}
-
-.click1:hover{
-    box-shadow: 2px 2px 15px 4px rgba(78,138,181,0.75);
-
-}
-
-.shapka{
-    width: 1917px;
-    height: 700px;
-    background-color: rgba(137, 43, 226, 0);
-}
-.shapka img {
-    width: 710px;
-    height: 700px;
-    transform: translate(1000px,0px)  
-}
-.shapka p{
-    display:flex; 
-    justify-content:center;
-    align-items: center;
-    font-family:'Courier New', Courier, monospace;
-    color:black;
-    font-size: 56px;
-    margin-top: -570px;
-    margin-left: -770px;
-    line-height: 69px;
-}
-.shapka q{
-    display:flex; 
-    justify-content:center;
-    align-items: center;
-    font-family:'Courier New', Courier, monospace;
-    margin-left: -680px;
-    margin-top: 36px;
-    font-style:normal;
-    font-size: 20px;
-    line-height: 28.13px;
-}
-.click2 {
-    display:flex; 
-    justify-content:center;
-   width:200px;
-   height: 60px;
-   border-radius: 5px;
-   background-color: #F7941E;
-   margin-left: 375px;
-   margin-top:90px;
-   }
-.click2 h2{
-    margin:auto;
-    color:white;
-    font-family:'Courier New', Courier, monospace;
-   }
