--- a/css/content.css
+++ b/css/content.css
@@ -2,6 +2,7 @@
   width: 1440px;
   height: 700px;
   background-color: #f1f1f2;
+  
 }
 .content img {
   width: 710px;
@@ -84,4 +85,7 @@
   margin: auto;
   color: #f7941e;
   font-family: "Gilroy", sans-serif;
+}
+.header {
+  margin-left:00px;;
 }
