--- a/css/header.css
+++ b/css/header.css
@@ -1,25 +1,32 @@
+@media screen and (max-width: 700px){
+.header {
+  clear: both;
+  font-size: 1.3em;
+}
+}
 .header a {
   cursor: pointer;
   text-decoration: none;
 }
 
 .header {
-  width: 1440px;
+  display: flex;
+  max-width: 1440px; 
   height: 116px;
   margin-top: -21px;
   background-color: rgba(144, 197, 74, 0);
+  
 }
 .header img {
-  position: relative;
   width: 51px;
   height: 59px;
   margin-top: 39px;
   margin-left: 80px;
 }
 
-.Content1 {
-  display: flex;
-  flex-direction: column;
+.header_knopki {
+
+  min-width: 1000px;
 }
 ul.list li {
   font-family: "Gilroy", sans-serif;
@@ -28,8 +35,9 @@ ul.list li {
   font-size: 20px;
 }
 ul.list {
+  display: flex;
   margin-left: 500px;
-  margin-top: -40px;
+  margin-top: 60px;
 }
 .list a {
   color: black;
@@ -45,8 +53,8 @@ ul.list {
   border-radius: 5px;
   background-color: rgba(235, 133, 8, 0);
   border: solid 1.5px rgb(235, 132, 8);
-  margin-left: 1260px;
-  margin-top: -30px;
+  margin-top: 60px;
+ 
 }
 .buttonHeader h2 {
   margin: auto;
