--- a/css/header.css
+++ b/css/header.css
@@ -1,52 +1,47 @@
-@media screen and (max-width: 700px){
-.header {
-  clear: both;
-  font-size: 1.3em;
-}
-}
 .header a {
   cursor: pointer;
   text-decoration: none;
 }
 
 .header {
-  display: flex;
-  max-width: 1440px; 
+  width: 1440px;
   height: 116px;
   margin-top: -21px;
   background-color: rgba(144, 197, 74, 0);
-  
-}
-.header {
-  margin-top: -30px;
 }
 .header img {
+  position: relative;
   width: 51px;
   height: 59px;
   margin-top: 39px;
   margin-left: 80px;
 }
 
-.header_knopki {
-  min-width: 500px;
-  margin-left: -130px;
+.Content1 {
+  display: flex;
+  flex-direction: column;
 }
 ul.list li {
   font-family: "Gilroy", sans-serif;
   display: inline;
-  margin: 20px;
   font-size: 20px;
 }
 ul.list {
-  display: flex;
-  margin-left: 500px;
-  margin-top: 60px;
+  margin-top: -40px;
 }
 .list a {
   color: black;
 }
 .list a:hover {
   color: #f7941e;
+}
+.list {
+  display: flex;
+  justify-content: space-evenly;
+}
+
+.header__knopki {
+  min-width: 1000px;
 }
 .buttonHeader {
   display: flex;
@@ -56,9 +51,8 @@ ul.list {
   border-radius: 5px;
   background-color: rgba(235, 133, 8, 0);
   border: solid 1.5px rgb(235, 132, 8);
-  margin-top: 60px;
-  margin-left: 200px;
- 
+  margin-left: 1260px;
+  margin-top: -30px;
 }
 .buttonHeader h2 {
   margin: auto;
