--- a/css/base.css
+++ b/css/base.css
@@ -1,5 +1,9 @@
-body {
+#wrapper {
   max-width: 1440px;
+  max-height: 900px;
   font-family: "Gilroy", sans-serif;
-  font-weight: 400;
+  margin: auto;
+}
+a{
+  text-decoration: none;
 }
