--- a/css/content2.css
+++ b/css/content2.css
@@ -8,7 +8,7 @@
     width: 730px;
     height: 600px;
   }
-  div.text__content2  {
+  .text__content2  {
     display: flex;
     justify-content: center;
     align-items: center;
