--- a/css/content3.css
+++ b/css/content3.css
@@ -9,6 +9,7 @@
     font-family: "Gilroy", sans-serif;
     color: black;
     font-size: 32px;
+    margin: 25px;
   }
   .text__content3 p {
     display: flex;
@@ -18,16 +19,13 @@
     color: black;
     font-size: 18px;
   }
-  .text__content3 p strong {
-    margin: 25px;
-  }
-  .text__content3  {
+  .text__content3 {
     padding-top: 40px;
   }
 
   .choice__img {
     display: flex;
-    
+    margin-top: 20px;
   }
   .choice__img img{
     margin: 15px;
@@ -35,7 +33,7 @@
    
   }
 
- .choice1 li {
+ .choice1 p, .choice1 li {
     display: flex;
     justify-content:flex-start;
    align-items: stretch;
@@ -43,16 +41,93 @@
     font-size: 24px;
     
  }
-
  .choice1 li a {
-    padding: 74px 0px;
+  margin-top: 100px;
     font-size: 14px;
     color: black;
  }
- .choice1{
-    box-shadow: -2px 9px 25px 0px rgba(0,0,0,0.75);
+ .choice1:hover{
+   box-shadow: -1px 3px 45px -16px rgba(0,0,0,0.75); 
 }
  .choice1 li a:hover {
     color:#f7941e;
-   
  }
+.choice1 img:hover {
+    filter: grayscale(12%) sepia(61%) hue-rotate(18deg) saturate(453%);
+
+}
+
+ .choice2 p, .choice2 li {
+    display: flex;
+    justify-content:flex-start;
+   align-items: stretch;
+    transform: translate(35px,-55px);
+    font-size: 24px;
+    
+ }
+ .choice2 li a {
+   margin-top: 100px;
+    font-size: 14px;
+    color: black;
+ }
+ .choice2:hover{
+   box-shadow: -1px 3px 45px -16px rgba(0,0,0,0.75); 
+}
+ .choice2 li a:hover {
+    color:#f7941e;
+ }
+
+
+
+ .choice3 p, .choice3 li {
+    display: flex;
+    justify-content:flex-start;
+   align-items: stretch;
+    transform: translate(35px,-55px);
+    font-size: 24px;
+    
+ }
+ .choice3 li a {
+  margin-top: 100px;
+    font-size: 14px;
+    color: black;
+ }
+ .choice3:hover{
+   box-shadow: -1px 3px 45px -16px rgba(0,0,0,0.75); 
+}
+ .choice3 li a:hover {
+    color:#f7941e;
+ }
+
+ .choice4 p, .choice4 li {
+    display: flex;
+    justify-content:flex-start;
+   align-items: stretch;
+    transform: translate(35px,-55px);
+    font-size: 24px;
+    
+ }
+ .choice4 li a {
+   margin-top: 100px;
+   font-size: 14px;
+    color: black;
+ }
+ .choice4:hover{
+   box-shadow: -1px 3px 45px -16px rgba(0,0,0,0.75); 
+}
+ .choice4 li a:hover {
+    color:#f7941e;
+ }
+
+ .choice2 img:hover {
+    filter: grayscale(12%) sepia(61%) hue-rotate(18deg) saturate(453%);
+
+}
+.choice3 img:hover {
+    filter: grayscale(12%) sepia(61%) hue-rotate(18deg) saturate(453%);
+
+}
+.choice4 img:hover {
+    filter: grayscale(12%) sepia(61%) hue-rotate(18deg) saturate(453%);
+
+}
