--- a/css/header.css
+++ b/css/header.css
@@ -11,7 +11,7 @@
 
 .header {
   display: flex;
-  width: 1440px; 
+  max-width: 1440px; 
   height: 116px;
   margin-top: -21px;
   background-color: rgba(144, 197, 74, 0);
@@ -33,6 +33,7 @@
 }
 ul.list li {
   font-family: "Gilroy", sans-serif;
+  display: inline;
   margin: 20px;
   font-size: 20px;
 }
