--- a/css/header.css
+++ b/css/header.css
@@ -1,8 +1,8 @@
-@media screen and (max-width: 700px){
-.header {
-  clear: both;
-  font-size: 1.3em;
-}
+@media screen and (max-width: 700px) {
+  .header {
+    clear: both;
+    font-size: 1.3em;
+  }
 }
 .header a {
   cursor: pointer;
@@ -11,11 +11,10 @@
 
 .header {
   display: flex;
-  max-width: 1440px; 
+  max-width: 1440px;
   height: 116px;
   margin-top: -21px;
   background-color: rgba(144, 197, 74, 0);
-  
 }
 .header {
   margin-top: -30px;
@@ -23,7 +22,7 @@
 .header img {
   width: 51px;
   height: 59px;
-  margin-top: 39px;
+  margin-top: 59px;
   margin-left: 80px;
 }
 
@@ -33,7 +32,6 @@
 }
 ul.list li {
   font-family: "Gilroy", sans-serif;
-  display: inline;
   margin: 20px;
   font-size: 20px;
 }
@@ -49,8 +47,6 @@ ul.list {
   color: #f7941e;
 }
 .buttonHeader {
-  display: flex;
-  justify-content: center;
   width: 150px;
   height: 43px;
   border-radius: 5px;
@@ -58,12 +54,12 @@ ul.list {
   border: solid 1.5px rgb(235, 132, 8);
   margin-top: 60px;
   margin-left: 200px;
- 
+  line-height: 40px;
 }
 .buttonHeader h2 {
-  margin: auto;
   color: #f7941e;
   font-family: "Gilroy", sans-serif;
+  text-align: center;
 }
 
 .buttonHeader:hover {
