--- a/css/content.css
+++ b/css/content.css
@@ -1,57 +1,60 @@
 .content {
   display: flex;
-  width: 1440px;
-  height: 700px;
-  background-color: #1c1cd600;
+  justify-content: space-between;
 }
-.content img {
-  width: 710px;
-  height: 700px;
-  transform: translate(730px, 0px);
+.content__img {
+  position: relative;
+  padding-bottom: 97%;
 }
-
-.text__content {
+.content__img img {
+  margin-left: 13px;
+}
+.div1__img {
+  position: absolute;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+.content__img-wrapper {
+  width: 719px;
+}
+.content__text {
   display: flex;
   justify-content: center;
-  align-items: center;
   flex-direction: column;
   font-size: 32px;
   font-family: "Gilroy", sans-serif;
-margin-left: -200px;
-margin-top: 100px;
+  margin-left: 150px;
 }
-.text__content q {
-  max-width: 400px;
-  font-family: "Gilroy", sans-serif;
-  margin-left: -680px;
-  margin-top: 36px;
-  font-size: 20px;
-  line-height: 28.13px;
-}
-.text__content p {
+.content__text p {
   max-width: 400px;
   font-family: "Gilroy", sans-serif;
   color: black;
   font-size: 56px;
-  margin-top: -170px;
-  margin-left: -620px;
   line-height: 69px;
 }
 
-.buttonContent {
-  display: flex;
-  justify-content: start;
-  align-items: center;
-  min-width: 200px;
+.content__text q {
+  max-width: 400px;
+  font-family: "Gilroy";
+  font-size: 20px;
+  line-height: 140.62%;
+  margin-top: 50px;
+}
+
+.content__button {
+  width: 200px;
   height: 60px;
   border-radius: 5px;
   background-color: #f7941e;
   margin-top: 45px;
-  transform: translate(-410px,0px);
+  line-height: 60px;
 }
-.buttonContent h2 {
-  margin: auto;
+.content__button h2 {
   color: white;
   font-family: "Gilroy", sans-serif;
   font-size: 18px;
+  text-align: center;
 }
