--- a/css/content3.css
+++ b/css/content3.css
@@ -1,133 +1,121 @@
-.content3 {
-    display: flex;
-    justify-content: center;
-    width: 1440px;
-    height: 820px;
-    background-color: rgba(255, 0, 0, 0);
-  }
-  .text__content3 p strong {
-    font-family: "Gilroy", sans-serif;
-    color: black;
-    font-size: 32px;
-    margin: 25px;
-  }
-  .text__content3 p {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    font-family: "Gilroy", sans-serif;
-    color: black;
-    font-size: 18px;
-  }
-  .text__content3 {
-    padding-top: 40px;
-  }
-
-  .choice__img {
-    display: flex;
-    margin-top: 20px;
-  }
-  .choice__img img{
-    margin: 15px;
-    padding: 65px 0px;
-   
-  }
-
- .choice1 p, .choice1 li {
-    display: flex;
-    justify-content:flex-start;
-   align-items: stretch;
-    transform: translate(35px,-55px);
-    font-size: 24px;
-    
- }
- .choice1 li a {
-  margin-top: 100px;
-    font-size: 14px;
-    color: black;
- }
- .choice1:hover{
-   box-shadow: -1px 3px 45px -16px rgba(0,0,0,0.75); 
+.content3__text p strong {
+  font-family: "Gilroy", sans-serif;
+  color: black;
+  font-size: 32px;
+  margin: 25px;
 }
- .choice1 li a:hover {
-    color:#f7941e;
- }
+.content3__text p {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  font-family: "Gilroy", sans-serif;
+  color: black;
+  font-size: 18px;
+}
+.content3__text {
+  padding-top: 40px;
+}
+
+.content3__knopki-img {
+  display: flex;
+  justify-content: flex-start;
+  flex-wrap: wrap;
+  margin-top: 10px;
+}
+.content3__knopki-img img {
+  margin: 15px;
+  padding: 65px 0px;
+}
+
+.choice1 p,
+.choice1 li {
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  transform: translate(35px, -55px);
+  font-size: 24px;
+}
+.choice1 li a {
+  margin-top: 100px;
+  font-size: 14px;
+  color: black;
+}
+.choice1:hover {
+  box-shadow: -1px 3px 45px -16px rgba(0, 0, 0, 0.75);
+}
+.choice1 li a:hover {
+  color: #f7941e;
+}
 .choice1 img:hover {
-    filter: grayscale(12%) sepia(61%) hue-rotate(18deg) saturate(453%);
-
+  filter: grayscale(12%) sepia(61%) hue-rotate(18deg) saturate(453%);
 }
 
- .choice2 p, .choice2 li {
-    display: flex;
-    justify-content:flex-start;
-   align-items: stretch;
-    transform: translate(35px,-55px);
-    font-size: 24px;
-    
- }
- .choice2 li a {
-   margin-top: 100px;
-    font-size: 14px;
-    color: black;
- }
- .choice2:hover{
-   box-shadow: -1px 3px 45px -16px rgba(0,0,0,0.75); 
+.choice2 p,
+.choice2 li {
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  transform: translate(35px, -55px);
+  font-size: 24px;
 }
- .choice2 li a:hover {
-    color:#f7941e;
- }
-
-
-
- .choice3 p, .choice3 li {
-    display: flex;
-    justify-content:flex-start;
-   align-items: stretch;
-    transform: translate(35px,-55px);
-    font-size: 24px;
-    
- }
- .choice3 li a {
+.choice2 li a {
   margin-top: 100px;
-    font-size: 14px;
-    color: black;
- }
- .choice3:hover{
-   box-shadow: -1px 3px 45px -16px rgba(0,0,0,0.75); 
+  font-size: 14px;
+  color: black;
 }
- .choice3 li a:hover {
-    color:#f7941e;
- }
-
- .choice4 p, .choice4 li {
-    display: flex;
-    justify-content:flex-start;
-   align-items: stretch;
-    transform: translate(35px,-55px);
-    font-size: 24px;
-    
- }
- .choice4 li a {
-   margin-top: 100px;
-   font-size: 14px;
-    color: black;
- }
- .choice4:hover{
-   box-shadow: -1px 3px 45px -16px rgba(0,0,0,0.75); 
+.choice2:hover {
+  box-shadow: -1px 3px 45px -16px rgba(0, 0, 0, 0.75);
 }
- .choice4 li a:hover {
-    color:#f7941e;
- }
+.choice2 li a:hover {
+  color: #f7941e;
+}
 
- .choice2 img:hover {
-    filter: grayscale(12%) sepia(61%) hue-rotate(18deg) saturate(453%);
+.choice2 img:hover {
+  filter: grayscale(12%) sepia(61%) hue-rotate(18deg) saturate(453%);
+}
 
+.choice3 p,
+.choice3 li {
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  transform: translate(35px, -55px);
+  font-size: 24px;
+}
+.choice3 li a {
+  margin-top: 100px;
+  font-size: 14px;
+  color: black;
+}
+.choice3:hover {
+  box-shadow: -1px 3px 45px -16px rgba(0, 0, 0, 0.75);
+}
+.choice3 li a:hover {
+  color: #f7941e;
 }
 .choice3 img:hover {
-    filter: grayscale(12%) sepia(61%) hue-rotate(18deg) saturate(453%);
+  filter: grayscale(12%) sepia(61%) hue-rotate(18deg) saturate(453%);
+}
 
+.choice4 p,
+.choice4 li {
+  display: flex;
+  justify-content: flex-start;
+  align-items: stretch;
+  transform: translate(35px, -55px);
+  font-size: 24px;
+}
+.choice4 li a {
+  margin-top: 100px;
+  font-size: 14px;
+  color: black;
+}
+.choice4:hover {
+  box-shadow: -1px 3px 45px -16px rgba(0, 0, 0, 0.75);
+}
+.choice4 li a:hover {
+  color: #f7941e;
 }
 .choice4 img:hover {
-    filter: grayscale(12%) sepia(61%) hue-rotate(18deg) saturate(453%);
-
+  filter: grayscale(12%) sepia(61%) hue-rotate(18deg) saturate(453%);
 }
