--- a/css/down__Content.css
+++ b/css/down__Content.css
@@ -1,3 +1,4 @@
+
 .text__down__content p strong {
   font-family: "Gilroy", sans-serif;
   color: black;
@@ -68,10 +69,10 @@
 .text3__down__content {
   display: flex;
 }
-
-.text3__donw__content {
-  padding: 15px 0px;
+.text3__down_content p {
+    margin:15px;
 }
+
 .footer1__down__contenta p strong {
   font-size: 24px;
   max-width: 450px;
@@ -88,6 +89,7 @@
 
 .footer1__down__contenta li {
   margin-top: 26px;
+  margin-left: 15px;
   font-size: 14px;
   color: black;
 }
@@ -105,9 +107,13 @@
   background: rgb(255, 255, 255);
   transform: translate(70px, 0px);
 }
+.text4__down_content p {
+    margin:15px;
+}
 .text4__down__content {
   display: flex;
 }
+
 .footer2__down__contenta p strong {
   font-size: 24px;
   max-width: 450px;
@@ -124,6 +130,7 @@
 
 .footer2__down__contenta li {
   margin-top: 26px;
+  margin-left: 15px;
   font-size: 14px;
   color: black;
 }
