--- a/css/content2.css
+++ b/css/content2.css
@@ -53,3 +53,7 @@
   font-size: 18px;
   text-align: center;
 }
+
+.content2__button:hover {
+  box-shadow: 2px 2px 15px 4px rgba(78, 138, 181, 0.75);
+}
