--- a/css/footer.css
+++ b/css/footer.css
@@ -3,7 +3,6 @@
   justify-content: center;
   align-items: center;
   flex-direction: column;
-  width: 1440px;
   height: 410px;
 }
 ul.footer__list1 {
@@ -57,7 +56,10 @@ border: 1px solid black;
 width: 1000px;
 border-radius: 50%;
 }
-
+.footer__logos {
+  display: flex;
+  flex-wrap: wrap;
+}
 .footer__logos img {
   padding: 10px;
   margin-top: 20px;
